<resources>
    <string name="app_name">DialogFragment</string>
    <string name="text_ppal">PMDM (Ejemplo de Dialog Fragment)</string>
    <string name="text_btn_login_inteface">login Interface</string>
    <string name="text_btn_login_orden_superior">login Orden Superior</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>