<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#673AB7"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/id_layout_ppal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/text_ppal"
            android:textColor="#4DB6AC"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/id_layout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:backgroundTint="#80D8FF"
                android:gravity="center"
                android:text="@string/text_btn_login_inteface"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_login2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:backgroundTint="#80D8FF"
                android:gravity="center"
                android:text="@string/text_btn_login_orden_superior"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_layout_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_user"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:text=""
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="italic"
                tools:text="Usuario" />

            <TextView
                android:id="@+id/txt_pass"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:text=""
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="italic"
                tools:text="password" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>